--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "node-cood-api",
-  "version": "0.0.1",
-  "description": "Node module for COOD API",
+  "version": "0.1.0",
+  "description": "Node module for the COOD API service",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "make test"
   },
   "repository": {
     "type": "git",
@@ -17,16 +17,21 @@
     "module"
   ],
   "author": "Kevin Cho",
-  "license": "ISC",
+  "license": [
+    {
+      "type": "MIT",
+      "url": "https://github.com/brentertz/scapegoat/blob/master/LICENSE-MIT"
+    }
+  ],
   "bugs": {
     "url": "https://github.com/kevinblade/node-cood-api/issues"
   },
-	"scripts": {
-		  "test": "make test"
-	},
   "homepage": "https://github.com/kevinblade/node-cood-api",
   "devDependencies": {
     "chai": "^3.2.0",
-    "mocha": "^2.2.5"
+    "chai-as-promised": "^5.1.0",
+    "deferred": "^0.7.2",
+    "mocha": "^2.2.5",
+    "node-rest-client": "^1.5.1"
   }
 }
