--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "chai": "^3.2.0",
     "chai-as-promised": "^5.1.0",
     "deferred": "^0.7.2",
+    "getmac": "^1.0.7",
     "mocha": "^2.2.5",
+    "mocha-clean": "^0.4.0",
     "node-rest-client": "^1.5.1"
   }
 }
